@@ -16,16 +16,18 @@ kde_module_LTLIBRARIES = liblatexexport.la
 
 liblatexexport_la_SOURCES = anchor.cc document.cc element.cc fileheader.cc footnote.cc \
 format.cc formula.cc latexexport.cc latexexport_factory.cc latexexportdia.cc \
-layout.cc listtable.cc para.cc pictureformat.cc \
-picturezone.cc table.cc texte.cc textformat.cc textzone.cc \
+layout.cc listtable.cc para.cc \
+pixmap.cc table.cc texte.cc textformat.cc textzone.cc \
 xml2latexparser.cc xmlparser.cc
+# pictureformat.cc picturezone.cc
 
 noinst_HEADERS = anchor.h border.h document.h element.h fileheader.h footnote.h \
 format.h formula.h latexexport.h latexexport_factory.h latexexportdia.h \
-layout.h listtable.h para.h pictureformat.h \
-picturezone.h table.h texte.h textformat.h textzone.h \
+layout.h listtable.h para.h  \
+pixmap.h table.h texte.h textformat.h textzone.h \
 xml2latexparser.h xmlparser.h  \
 latexexportdia.h
+# pictureformat.h picturezone.h 
 
 ######## Debug
 check_PROGRAMS = texlauncher
