@@ -104,7 +104,11 @@ void FileHeader::analyseAttributs(const QDomNode balise)
 void FileHeader::generate(QTextStream &out)
 {
 	kdDebug() << "GENERATION OF THE FILE HEADER" << endl;
-	generatePreambule(out);
+	if(mustUseLatin1())
+		generateLatinPreambule(out);
+	else if(mustUseUnicode())
+		generateUnicodePreambule(out);
+
 	generatePackage(out);
 	if(getFormat() == TF_CUSTOM)
 		generatePaper(out);
@@ -133,9 +137,9 @@ void FileHeader::generatePaper(QTextStream &out)
 }
 
 /*******************************************/
-/* GeneratePreambule                       */
+/* GenerateLatinPreambule                  */
 /*******************************************/
-void FileHeader::generatePreambule(QTextStream &out)
+void FileHeader::generateLatinPreambule(QTextStream &out)
 {
 	out << "%% Generated by Kword. Don't modify this file but the file *.kwd." << endl;
 	out << "%% Send an email to rjaolin@ifrance.com for bugs, whishes, .... Thanks you." << endl;
@@ -194,11 +198,78 @@ void FileHeader::generatePreambule(QTextStream &out)
 }
 
 /*******************************************/
+/* GenerateUnicodePreambule                */
+/*******************************************/
+void FileHeader::generateUnicodePreambule(QTextStream &out)
+{
+	out << "%% Generated by Kword. Don't modify this file but the file *.kwd." << endl;
+	out << "%% Send an email to rjaolin@ifrance.com for bugs, whishes, .... Thanks you." << endl;
+	out << "%% Compile this file with : lambda filename.tex" << endl;
+	out << "%% a dvi file will be generated." << endl;
+	out << "%% Use odvips to convert it and to see it with gv" << endl;
+	out << "%% The file uses the latex style (not the kword style). " << endl;
+	out << "\\ocp\\TexUTF=inutf8" << endl;
+	out << "\\InputTranslation currentfile \\TexUTF" << endl;
+	out << "\\documentclass[";
+	switch(getFormat())
+	{
+		case TF_A3:
+			out << "";
+			break;
+		case TF_A4:
+			out << "a4paper, ";
+			break;
+		case TF_A5:
+			out << "a5paper, ";
+			break;
+		case TF_USLETTER:
+			out << "letterpaper, ";
+			break;
+		case TF_USLEGAL:
+			out << "legalpaper, ";
+			break;
+		case TF_SCREEN:
+			out << "";
+			break;
+		case TF_CUSTOM:
+			out << "";
+			break;
+		case TF_B3:
+			out << "";
+			break;
+		case TF_USEXECUTIVE:
+			out << "executivepaper, ";
+			break;
+	}
+	if(getOrientation() == TO_LANDSCAPE)
+		out << "landscape, ";
+	/* To change : will use a special latexcommand to able to
+	 * obtain more than one column :))
+	 */
+	switch(getColumns())
+	{
+		case TC_1:
+			//out << "onecolumn, ";
+			break;
+		case TC_2:
+			out << "twocolumn, ";
+			break;
+		case TC_MORE:
+			out << "";
+	}
+	/* The font and the type of the doc. can not be changed, hmm ? */
+	out << "11pt]{article}" << endl;
+}
+
+
+/*******************************************/
 /* GeneratePackage                         */
 /*******************************************/
 void FileHeader::generatePackage(QTextStream &out)
 {
 	out << "% Package(s) to include" << endl;
+	if(mustUseUnicode())
+		out << "\\usepackage{omega}" << endl;
 	if(getFormat() == TF_A4)
 		out << "\\usepackage[a4paper]{geometry}" << endl;
 	if(hasFooter() || hasHeader())
