@@ -108,7 +108,7 @@
 
     <tr BGCOLOR="#EEEEFF">
      <td VALIGN=TOP WIDTH=1% NOWRAP><b><font size=+1>Last update</font></b></td>
-     <td>25 August 2001</td>
+     <td>27 October 2001</td>
     </tr>
 
     <tr BGCOLOR="#CCCCFF">
@@ -126,29 +126,29 @@
 <B>VERSION 1:</B>
 <table BORDER="0" WIDTH="100%">
 <tr><td>text with accent</td>			<td>DONE</td></tr>
-<tr><td>text with special characters</td>	<td>A LOT OF SPECIAL CHARS SUPPORTED !</td></tr>
-<tr><td>layout</td>					<td>DONE</td></tr>
-<tr><td>title</td>					<td>DONE</td></tr>
-<tr><td>list</td>					<td>DONE</td></tr>
-<tr><td>paper</td>					<td>DONE</td></tr>
+<tr><td>text with special characters</td>	<td>A LOT OF SPECIAL CHARS SUPPORTED for latin1  (all for unicode)!</td></tr>
+<tr><td>layout</td>				<td>DONE</td></tr>
+<tr><td>title</td>				<td>DONE</td></tr>
+<tr><td>list</td>				<td>DONE</td></tr>
+<tr><td>paper</td>				<td>DONE</td></tr>
 <tr><td>footnote, head</td>			<td>DONE (still a little bug for first foot/header and a line is added)</td></tr>
-<tr><td>comments with kdoc</td>		<td>STARTED</td></tr>
-<tr><td>unicode support</td>		<td>STUDY (SEE omega package)</td></tr>
-<tr><td>break (line, page)</td>		<td>STARTED</td></tr>
+<tr><td>comments with kdoc</td>			<td>STARTED</td></tr>
+<tr><td>unicode support</td>			<td>DONE (omega package)</td></tr>
+<tr><td>break (line, page)</td>			<td>STARTED</td></tr>
 <tr><td>indent list</td>			<td></td></tr>
 </table>
 <B>VERSION 2</B>
 <table BORDER="0" WIDTH="100%">
-<tr><td>table</td> 					<td>STARTED</td></tr>
+<tr><td>table</td> 				<td>STARTED</td></tr>
 <tr><td>picture</td>				<td>STARTED</td></tr>
-<tr><td>personalization</td>		<td></td></tr>
+<tr><td>personalization</td>			<td></td></tr>
 </table>
 <B>VERSION 3</B>
 <table BORDER="0" WIDTH="100%">
-<tr><td>parts</td>			<td></td></tr>
-<tr><td>math</td>			<td>STARTED</td></tr>
-<tr><td>figure</td>			<td></td></tr>
-<tr><td>frame</td>			<td></td></tr>
+<tr><td>parts</td>				<td></td></tr>
+<tr><td>math</td>				<td>STARTED (KFormula)</td></tr>
+<tr><td>figure</td>				<td></td></tr>
+<tr><td>frame</td>				<td></td></tr>
 </table>
 <!--</ul>-->
       </PRE>
@@ -160,6 +160,34 @@
 
      <td>
 	<ul>
+	<li>06 november 2001
+	<ul>
+		<li>features
+		<ul>
+			<li>support of picture inline.</li>
+			<li>compile with qt3</li>
+		</ul>
+		</li>
+	</ul>
+	</li>
+
+	<li>27 October 2001
+	<ul>
+		<li>features
+		<ul>
+			<li>support of unicode with omega</li>
+		</ul>
+		</li>
+	</ul>
+	</li>
+	<li>14 October 2001
+	<ul>
+		<li>BUG FIXES
+		<ul>
+			<li>Some special char. were not corected generated.</li>
+		</ul>
+		</li>
+	</ul></li>
 	<li>20 August 2001
 	<ul>
 		<li>bug fixes
@@ -333,7 +361,7 @@
 <tr><td></td>			<td>1...Text frame</td>		<td>SUPPORTED</td></tr>
 <tr><td></td>			<td>2...Picture frame</td>	<td>ANALYSED</td></tr>
 <tr><td></td>			<td>3...Part frame</td>		<td>ANALYSED</td></tr>
-<tr><td></td>			<td>4...Formula frame</td>	<td>ANALYSED</td></tr>
+<tr><td></td>			<td>4...Formula frame</td>	<td>SUPPORTED</td></tr>
 
 <tr><td>frameInfo</td>		<td></td></tr>
 <tr><td></td>			<td>0...Body</td>		<td>SUPPORTED</td></tr>
