@@ -27,6 +27,10 @@
 /* Init static data */
 FileHeader* XmlParser::_fileHeader = 0;
 Document* XmlParser::_root = 0;
+bool XmlParser::_useLatin1 = true;
+bool XmlParser::_useUnicode = false;
+bool XmlParser::_useLatexStyle = true;
+KoStore* XmlParser::_in = NULL;
 
 XmlParser::XmlParser(QString filename):
 		_filename(filename)
@@ -48,12 +52,28 @@ XmlParser::XmlParser(QByteArray in)
 	_document.setContent(in);
 }
 
+XmlParser::XmlParser(const KoStore& in)
+{
+	_in = new KoStore(in);
+	if(!_in->open("root"))
+	{
+	        kdError(30503) << "Unable to open input file!" << endl;
+        	_in->close();
+	        return;
+	}
+	/* input file Reading */
+	QByteArray array = _in->read(_in->size());
+	_document.setContent(array);
+}
+
 XmlParser::XmlParser()
 {
 }
 
 XmlParser::~XmlParser()
 {
+	if(_in != NULL)
+		_in->close();
 }
 
 QDomNode XmlParser::getChild(QDomNode balise, QString name)
